changed profile pic changed project from squad to barbershop

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-circle img-responsive pull-left" src="assets/images/profile.jpg" alt="Ahmed ALi" />
+            <img class="profile-image img-circle img-responsive pull-left" src="assets/images/profile1.gif" alt="Ahmed ALi" />
             <div class="profile-content pull-left">
                 <h1 class="name">Ahmed Ali</h1>
                 <h2 class="desc">Software Developer</h2>   
@@ -118,13 +118,13 @@
                             </div><!--//item-->
                             
                             <div class="item row">
-                                <a class="col-md-4 col-sm-4 col-xs-12" href="https://hero-squads.herokuapp.com/" target="_blank">
-                                <img class="img-responsive project-image" src="assets/images/projects/heroes.png" alt="project name" />
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="https://barber-shops.herokuapp.com/stylists" target="_blank">
+                                <img class="img-responsive project-image" src="assets/images/projects/rsz_barbershop.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
-                                    <h3 class="title"><a href="https://hero-squads.herokuapp.com/" target="_blank">Squad - Web App</a></h3>
-                                    <p>A spark application that allows you to recruit a well-balanced team of superheroes.One squad can have up to 4 super heroes. It is a fun application that let's you pick a dream team of super heroes</p>
-                                    <p><a class="more-link" href="https://hero-squads.herokuapp.com/" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
+                                    <h3 class="title"><a href="https://barber-shops.herokuapp.com/stylists" target="_blank">Babershop System - Web App</a></h3>
+                                    <p>A spark application that allows you the admin to keep track of clients and stylist. The Admin is able to adda a list of stylists and for each stylist, add clients who see that stylist. </p>
+                                    <p><a class="more-link" href="https://barber-shops.herokuapp.com/stylists" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
                                 </div><!--//desc-->                          
                             </div><!--//item-->                            
                             <div class="item row">
@@ -170,7 +170,7 @@
                             <ul class="list-unstyled">
                                 <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Nairobi, Kenya</li>
                                 <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">norbixin@live.com</a></li>
-                                <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="#">http://www.website.com</a></li>
+                           
                             </ul>
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
