--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <div class="content">    
                                                
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="" target="_blank">Smart Mirror</a></h3>
+                                <h3 class="title"><a href="https://github.com/brianmituka/smart_mirror" target="_blank">Smart Mirror</a></h3>
                                 <p class="summary">A Mirror that tells you the time,weather and news.</p>
                                 <div class="featured-image">
                                     <a href="https://github.com/brianmituka/smart_mirror" target="_blank">
